Cleaned code by adding new services to make is easier on the handlers and simplify complex operations